fix can not logout issue

--- a/public/index.html
+++ b/public/index.html
@@ -380,5 +380,5 @@
     <div id="loader_stats" style="display: none;"></div>
     <!-- end hidden DOM -->
     </body>
-
+    <iframe id="hiddenFrame" style="visibility: hidden; display: none" />
 </html>
